SPORTZLYTICS NEW RELEASE NOTES (v1.0.5)
04/08/2025

1) Provided and Implemented Coach Settings to update (Max, Min Price and Increment Value)