@@ -35,6 +35,6 @@ jobs:
         run: |
           aws s3 sync dist/ s3://webapps.sportzlytics.com/BMS/ --delete
 
-      # - name: 📄 Upload ReleaseNotes.txt to S3 PORTAL
-      #   run: |
-      #     aws s3 cp ReleaseNotes.txt s3://webapps.sportzlytics.com/BMS/ReleaseNotes.txt
+      - name: 📄 Upload ReleaseNotes.txt to S3 PORTAL
+        run: |
+          aws s3 cp ReleaseNotes.txt s3://webapps.sportzlytics.com/BMS/ReleaseNotes.txt
